<resources>
    <string name="app_name">SouthHillsChatApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register_text">Don\'t have an account?</string>
    <string name="action_register">Register!</string>
    <string name="action_rember_me">Remember Me?</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_sign_in_short">SouthHills Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register Account</string>
    <string name="title_activity_forget_password">Reset Password</string>
    <string name="title_activity_main">Home</string>
</resources>
